--- a/render.yaml
+++ b/render.yaml
@@ -21,10 +21,8 @@ services:
         value: 123456
 
   # Frontend Static Site
-  - type: web
+  - type: static
     name: techarticles-frontend
-    env: static
-    plan: free
     buildCommand: cd frontend && npm install && npm run build
     staticPublishPath: frontend/dist
     envVars:
