--- a/render.yaml
+++ b/render.yaml
@@ -4,5 +4,5 @@ services:
     name: techarticles-backend
     env: node
     plan: free
-    buildCommand: cd frontend && npm install && npm run build && cd ../backend && npm install
+    buildCommand: cd frontend && npm install && npx vite build && cd ../backend && npm install
     startCommand: cd backend && npm start
